fix css on technical content in model's detail page on mobile

--- a/src/components/Model/styles.scss
+++ b/src/components/Model/styles.scss
@@ -174,6 +174,7 @@
 @media (max-width: 600px) {
   .model-content {
     /* SELF-LAYOUT */
+    width: 100%;
     margin-bottom: 16vh;
     /* APPEARANCE */
 
@@ -190,7 +191,7 @@
 
 .model-content-technical-container {
   /* SELF-LAYOUT */
-
+  width: 100%;
   /* APPEARANCE */
 
   /* MISCELLANEAOUS */
@@ -205,7 +206,8 @@
 }
 @media (max-width: 600px) {
   .model-content-technical-container {
-    column-gap: var(--size-3x);
+    justify-content: space-evenly;
+    column-gap: 0;
   }
 }
 
